# fproxy

./: .gitignore  README.md  go.mod  integration_test.go  main.go
client/: client.go  client_test.go
config/: config.go  config_test.go
examples/: client.yaml  server.yaml
fproxy-rs/: Cargo.toml
fproxy-rs/src/: client.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs
fproxy-rs/tests/: integration_test.rs
openspec/: project.md
openspec/changes/archive/2025-12-24-add-bidirectional-udp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-24-add-bidirectional-udp/specs/udp-relay/: spec.md
openspec/changes/archive/2025-12-24-add-udp-relay/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-24-add-udp-relay/specs/udp-relay/: spec.md
openspec/changes/archive/2025-12-24-add-verbose-logging/: proposal.md  tasks.md
openspec/changes/archive/2025-12-24-add-verbose-logging/specs/udp-relay/: spec.md
openspec/changes/archive/2025-12-24-update-unified-session-protocol/: proposal.md  tasks.md
openspec/changes/archive/2025-12-24-update-unified-session-protocol/specs/udp-relay/: spec.md
openspec/changes/archive/2025-12-25-add-server-address-validation/: proposal.md  tasks.md
openspec/changes/archive/2025-12-25-add-server-address-validation/specs/udp-relay/: spec.md
openspec/changes/archive/2025-12-25-rewrite-rust/: design.md  proposal.md  tasks.md
openspec/specs/udp-relay/: spec.md
protocol/: packet.go  packet_test.go
server/: server.go  server_test.go
(+1 files in other folders)
