[package]
name = "fproxy"
version = "0.1.0"
edition = "2021"
description = "A Layer 4 bidirectional UDP relay with redundant multi-path transmission and packet deduplication"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "fproxy"
path = "src/main.rs"

[lib]
name = "fproxy"
path = "src/lib.rs"
